# structdoc

./: CHANGELOG.md  Cargo.toml  README.md
examples/: document.rs
src/: impls.rs  lib.rs
structdoc-derive/: Cargo.toml  README.md
structdoc-derive/src/: lib.rs
