[package]
name = "structdoc"
version = "0.1.0"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
edition = "2018"

[workspace]
members = [
    ".",
    "structdoc-derive",
]

[features]
default = ["structdoc-derive"]

[dependencies]
bitflags = "~1"
serde = "~1"
serde_derive = "~1"
structdoc-derive = { version = "~0.1", path = "structdoc-derive", optional = true }
