[package]
name = "structdoc"
version = "0.1.3"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
edition = "2018"
description = "Extract structure and documentation from structs"
documentation = "https://docs.rs/structdoc"
repository = "https://github.com/vorner/structdoc"
readme = "README.md"
keywords = ["documentation", "configuration"]
license = "Apache-2.0/MIT"

[badges]
travis-ci = { repository = "vorner/structdoc" }
appveyor = { repository = "vorner/corona" }
maintenance = { status = "actively-developed" }

[workspace]
members = [
    ".",
    "structdoc-derive",
]

[features]
default = ["structdoc-derive"]

[dependencies]
bitflags = "~1"
itertools = "~0.8"
structdoc-derive = { version = "~0.1.3", path = "structdoc-derive", optional = true }

[dev-dependencies]
serde = "~1"
serde_derive = "~1"
version-sync = "~0.8"
