[package]
name = "structdoc-derive"
version = "0.1.0"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
edition = "2018"

[features]
nightly = ["proc-macro2/nightly"]

[dependencies]
either = "~1"
heck = "~0.3"
itertools = "~0.8"
quote = "~0.6"
proc-macro2 = "~0.4"
syn = "~0.15"
unindent = "~0.1"

[lib]
proc-macro = true
