[package]
name = "structdoc-derive"
version = "0.1.4"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
edition = "2018"
description = "Extract structure and documentation from structs (derive support)"
documentation = "https://docs.rs/structdoc"
repository = "https://github.com/vorner/structdoc"
readme = "README.md"
keywords = ["documentation", "configuration"]
license = "Apache-2.0/MIT"

[features]
nightly = ["proc-macro2/nightly"]

[dependencies]
either = "~1"
heck = "~0.3"
itertools = "~0.8"
quote = "~1"
proc-macro2 = "~1"
syn = "~1"
unindent = "~0.1"

[dev-dependencies]
version-sync = "~0.8"

[lib]
proc-macro = true
